--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   },
   "require": {
     "php": "^5.5 || ^7.0",
-    "doctrine/mongodb-odm": "^1.2",
+    "doctrine/mongodb-odm": "^1.2 || dev-master",
     "ramsey/uuid": "^3.0"
   },
   "require-dev": {
